fixing scrollbar shenanigans

--- a/assets/_styles/core/layout.scss
+++ b/assets/_styles/core/layout.scss
@@ -115,7 +115,7 @@
   
   .page-wrapper {
     padding: 0 $gutter;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 
   #main {
